include only invisible tabs to "more" menu and other fixes

--- a/res/themes/light/light.scss
+++ b/res/themes/light/light.scss
@@ -601,7 +601,7 @@ TabWidget {
 }
 
 TabControl::more {
-    padding: 0 0 2pt 2pt;
+    padding: 0 0 2pt 4pt;
 }
 
 TabHost {
